updated javadoc