@@ -1,13 +1,14 @@
 package com.kazurayam.unittesthelperdemo;
 
-import com.kazurayam.unittest.TestHelper;
+import com.kazurayam.unittest.TestOutputOrganizer;
 import org.junit.jupiter.api.Test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
-public class HelperlessTest {
+public class OrganizerAbsentTest {
 
     /*
      * will create a file `<projectDir>/sample1.txt`
@@ -15,9 +16,9 @@ public class HelperlessTest {
     @Test
     public void test_write_under_current_working_directory() throws Exception {
         Path p = Paths.get("sample1.txt");
-        Files.writeString(p, "Hello, world!");
+        Files.write(p, "Hello, world!".getBytes(StandardCharsets.UTF_8));
         System.out.println("[test_write_under_current_working_directory] p = " +
-                TestHelper.toHomeRelativeString(p));
+                TestOutputOrganizer.toHomeRelativeString(p));
     }
 
 }
